Change recent files menu to show at most 10 items

... regardless of the maxRecentFileItems setting. This matches the
previous behaviour before MR !1182.

The reason is that, QMenu does not handle too many items in a nice way,
and the tall thumbnail plus potentially long paths doesn't help. The
current default maxRecentFileItems being 100 is too much for the menu to
handle.

BUG: 447332